# vvz-docprinter

./: .gitignore  README.md  projectid  pyproject.toml  requirements-dev.txt  requirements.txt
debian/: changelog  conf.json.example  control  debhelper-build-stamp  docker-image.env  docprinter.default  docprinter.postrm.debhelper  docprinter.service  files  install  postinst  postrm  remove-container.sh  rules  run-container.sh
docker/: Dockerfile  build.sh  push.sh  run.sh  run_local.sh
docprinter/: __init__.py  __main__.py  cli.py  main.py  server_manager.py  trace_logging.py
docprinter/commands/: __init__.py  get_print_result_command.py  print_command.py  registration.py
docprinter/runtime/: __init__.py  sweeper.py
docs/: PRINT_FORMAT_AND_API.md  PROJECT_RULES.md  command_metadata_standard.md
docs/agents/: project_overlay.md
docs/plans/: tech_spec.md
old_code/: index.txt  scripts__check_render.py-b19e6c64-6b6f-4afa-a393-36b0dbbeba32  starter.py
old_code/plugins/: PluginError.py  mktmpl.py  rac1c.py
runtime/_cmp/: ad67f37e-e8a8-4294-bd37-3f23d3ff5a2f.docx  eb8d2bc2-38aa-4f17-8b78-ddd314e3aaeb.docx
runtime/_pytest_compare_out/: f422f6f6-db44-4b1d-b557-89bbf8a02b14.docx
runtime/regen_verify/: 4f970337-8a1c-4d8a-ac6f-ebe222b81a06.docx
scripts/: assemble-deb.sh  build-deb.sh  prepare-deb-release.sh  print_client.py  test-fresh-install.sh  test-remote-server.py
scripts-old/: Dockerfile
tests/: conftest.py  test_cli.py  test_get_print_result_command.py  test_print_command.py  test_runtime_sweeper.py  test_server_manager.py  test_trace_logging.py
(+12 files in other folders)
